# osstr-deprecated

./: .gitignore  CHANGELOG.md  README.md  cabal.project  hie.yaml  osstr-deprecated.cabal
.github/workflows/: ci.yaml
src/: Lib.hs
